# SpaceChess

./: .gitignore  CMakeLists.txt  readme.md
docs/: eltecimer.eps  szakdolgozat_01.tex
docs/diagrams/: controller.dia  legacy.dia  model.dia  modules.dia  use_case_local_game.dia  use_case_network_game.dia  use_case_playback.dia  view.dia
resources/: empty.board  initial.board  move.list  sansation_licence.txt
resources/pieces/: lastspacechessgame.txt  pieces_license.txt
source/: BUILD  CMakeLists.txt  WORKSPACE  app.cpp  app.h  apptest.cpp  common.h  core.cpp  core.h  event.cpp  event.h  log.h  main.cpp  testbase.cpp
source/Common/: BUILD  common.h  irenderer.h  log.cpp  player.h
source/Controller/: CMakeLists.txt  connectionbuilder.cpp  connectionbuilder.h  filebasedgamecontroller.cpp  filebasedgamecontroller.h  gamecontroller.cpp  gamecontroller.h  localgamecontroller.cpp  localgamecontroller.h  localgamecontrollerv1.cpp  localgamecontrollerv1.h  networkgamecontroller.cpp  networkgamecontroller.h  playbackcontroller.cpp  playbackcontroller.h  playercontroller.cpp  playercontroller.h
source/Dependencies/: sfml.BUILD
source/Model/: BUILD  CMakeLists.txt  bishop.cpp  bishop.h  bishoptest.cpp  board.cpp  board.h  boardtest.cpp  coord.cpp  coord.h  creation.cpp  field.cpp  field.h  figure.cpp  figure.h  fullboard.cpp  fullboard.h  game.cpp  game.h  gameevent.cpp  gamestate.cpp  gamestate.h  gamev1.cpp  gamev1.h  history.cpp  history.h  historytest.cpp  iboardinfo.h  igameinfo.h  judge.cpp  judge.h  king.h  kingtest.cpp  knight.cpp  knight.h  knighttest.cpp  move.cpp  move.h  movetest.cpp  pawn.cpp  (+17 more)
source/Model/GameEvents/: CMakeLists.txt  addpiece.cpp  addpiece.h  creation.cpp  creation.h  gameevent.cpp  gameevent.h  move.cpp  move.h  movetest.cpp
source/Model/Pieces/: CMakeLists.txt  bishop.cpp  bishop.h  bishoptest.cpp  king.cpp  king.h  kingtest.cpp  knight.cpp  knight.h  knighttest.cpp  pawn.cpp  pawn.h  pawntest.cpp  piece.cpp  piece.h  piecetest.cpp  queen.cpp  queen.h  queentest.cpp  rook.cpp  rook.h  rooktest.cpp  unicorn.cpp  unicorn.h  unicorntest.cpp
source/Tests/: CMakeLists.txt  addpiecetest.cpp  bishoptest.cpp  boardtest.cpp  historytest.cpp  kingtest.cpp  knighttest.cpp  movetest.cpp  pawntest.cpp  piecetest.cpp  positiontest.cpp  queentest.cpp  rooktest.cpp  tests.cpp  unicorntest.cpp
source/Util/: BUILD  CMakeLists.txt  timelychangingvalue.cpp  timelychangingvalue.h  timelychangingvaluetest.cpp  utiltests.cpp
source/View/: BUILD  CMakeLists.txt  boardpainter.cpp  boardpainter.h  boardpainter2d.cpp  boardpainter2d.h  boardpaintertest.cpp  cursorinfo.cpp  cursorinfo.h  field.cpp  field.h  fieldcontent.cpp  fieldcontent.h  fieldcontenttest.cpp  fieldtest.cpp  fontmanager.cpp  fontmanager.h  irenderer.h  messagewidget.cpp  messagewidget.h  nextplayerinfo.cpp  nextplayerinfo.h  panelpainter.cpp  panelpainter.h  rank.cpp  rank.h  ranktest.cpp  render25d.cpp  render25d.h  render2d.cpp  render2d.h  stylesheet.cpp  stylesheet.h  stylesheettest.cpp  texturemanager.cpp  texturemanager.h  view.cpp  view.h  viewtests.cpp  widget.cpp  (+1 more)
source/test/: BUILD
